web crawling init

--- a/Untitled.ipynb
+++ b/Untitled.ipynb
@@ -1229,7 +1229,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 105,
+   "execution_count": 114,
    "metadata": {},
    "outputs": [
     {
@@ -1249,18 +1249,35 @@
     "# to search \n",
     "query = \"fault in our stars imdb\"\n",
     "  \n",
-    "for j in search(query, tld=\"co.in\", num=10, stop=1, pause=2): \n",
+    "for j in search(query, tld=\"co.in\", num=10, stop=1, pause=1): \n",
     "    print(j) "
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 111,
+   "execution_count": 124,
    "metadata": {},
    "outputs": [],
    "source": [
-    "if j[:20] == \"https://www.imdb.coma\":\n",
-    "    print(j)"
+    "g = search(query, stop=1)\n",
+    "a = next(g)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 125,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "https://www.imdb.com/title/tt2582846/\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(a)"
    ]
   },
   {
